--- a/gnome-blog/trunk/PKGBUILD
+++ b/gnome-blog/trunk/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=gnome-blog
 pkgver=0.9.1
-pkgrel=2
+pkgrel=3
 pkgdesc="A gnome application that allows you to post entries to many different blog formats."
-arch=(i686 x86_64)
+arch=('any')
 license=('GPL')
 depends=('gnome-python')
 makedepends=('pkgconfig' 'perlxml')
@@ -16,14 +16,15 @@ source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/0.9/${pkgname}-${pkgve
 md5sums=('5eb8a04aadf33554a2087589a0025ecc')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd ${srcdir}/${pkgname}-${pkgver}
   ./configure --prefix=/usr --sysconfdir=/etc \
               --libexecdir=/usr/lib/gnome-blog \
               --localstatedir=/var
   make || return 1
-  make DESTDIR=${startdir}/pkg install
+  make DESTDIR=${pkgdir} install
 
-  mkdir -p ${startdir}/pkg/usr/share/gconf/schemas
-  gconf-merge-schema ${startdir}/pkg/usr/share/gconf/schemas/${pkgname}.schemas ${startdir}/pkg/etc/gconf/schemas/*.schemas
-  rm -f ${startdir}/pkg/etc/gconf/schemas/*.schemas
+  install -dm755 ${pkgdir}/usr/share/gconf/schemas
+  gconf-merge-schema ${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas \
+    ${pkgdir}/etc/gconf/schemas/*.schemas
+  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 }
