--- a/libwebkit/trunk/PKGBUILD
+++ b/libwebkit/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=libwebkit
 pkgver=1.1.21
-pkgrel=1
+pkgrel=2
 pkgdesc="an opensource web content engine, derived from KHTML and KJS from KDE"
 arch=('i686' 'x86_64')
 url="http://webkitgtk.org/"
 license=('custom')
-depends=('libxt' 'libxslt' 'sqlite3>=3.6.22' 'gtk2>=2.19.5' 'icu>=4.2' 'gstreamer0.10-base>=0.10.26' 'libsoup>=2.29.90' 'enchant>=1.5.0')
-makedepends=('gperf' 'gtk-doc>=1.11')
+depends=('libxt' 'libxslt' 'sqlite3>=3.6.22' 'gtk2>=2.19.5-2' 'icu>=4.2' 'gstreamer0.10-base>=0.10.26' 'libsoup>=2.29.90' 'enchant>=1.5.0')
+makedepends=('gperf' 'gtk-doc>=1.11' 'gir-repository')
 provides=('webkitgtk-svn')
 conflicts=('webkitgtk-svn')
 replaces=('webkitgtk-svn')
@@ -20,7 +20,7 @@ md5sums=('8957bcffd0a0394a75f8f7936ab270bc')
 build() {
   cd "${srcdir}/webkit-${pkgver}"
   ./configure --prefix=/usr \
-      --enable-video \
+      --enable-video --enable-introspection \
       --with-font-backend=freetype --enable-gtk-doc \
       --enable-jit --with-unicode-backend=icu || return 1
   make || return 1
