--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=vim
 _srcver=7.2
-_patchlevel=359
+_patchlevel=368
 pkgver=${_srcver}.${_patchlevel}
-pkgrel=2
+pkgrel=1
 pkgdesc='Vi Improved, a highly configurable, improved version of the vi text editor'
 arch=('i686' 'x86_64')
 license=('custom:vim')
@@ -39,7 +39,7 @@ build()
     --with-compiledby=ArchLinux --with-features=big \
     --enable-gpm --enable-acl --with-x=no --disable-gui \
     --enable-multibyte --enable-cscope \
-    --enable-perlinterp
+    --enable-perlinterp --enable-rubyinterp
     #--with-global-runtime=/usr/share/vim --with-vim-name=vim \
   make || return 1
 }
