--- a/gvim/trunk/PKGBUILD
+++ b/gvim/trunk/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=gvim
 _srcver=7.2
 _patchlevel=368
 pkgver=${_srcver}.${_patchlevel}
-pkgrel=1
+pkgrel=2
 pkgdesc="the vim text editor with advanced features enabled, such as a gui mode"
 arch=('i686' 'x86_64')
 license=('custom:vim')
@@ -36,7 +36,7 @@ build()
     --with-compiledby=ArchLinux --with-features=big \
     --with-x=yes --disable-gpm --enable-gui=gtk2 \
     --enable-multibyte --enable-cscope --enable-netbeans \
-    --enable-perlinterp --enable-pythoninterp --enable-rubyinterp
+    --enable-perlinterp --enable-pythoninterp --disable-rubyinterp
 
   make || return 1
 }
