--- a/vim/trunk/PKGBUILD
+++ b/vim/trunk/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=vim
 _srcver=7.2
 _patchlevel=368
 pkgver=${_srcver}.${_patchlevel}
-pkgrel=1
+pkgrel=2
 pkgdesc='Vi Improved, a highly configurable, improved version of the vi text editor'
 arch=('i686' 'x86_64')
 license=('custom:vim')
@@ -39,7 +39,7 @@ build()
     --with-compiledby=ArchLinux --with-features=big \
     --enable-gpm --enable-acl --with-x=no --disable-gui \
     --enable-multibyte --enable-cscope \
-    --enable-perlinterp --enable-rubyinterp
+    --enable-perlinterp
     #--with-global-runtime=/usr/share/vim --with-vim-name=vim \
   make || return 1
 }
