--- a/zlib/trunk/PKGBUILD
+++ b/zlib/trunk/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=zlib
-pkgver=1.2.3.8
+pkgver=1.2.3.9
 pkgrel=1
-pkgdesc='compression library implementing the deflate compression method found in gzip and PKZIP'
+pkgdesc='Compression library implementing the deflate compression method found in gzip and PKZIP'
 arch=('i686' 'x86_64')
 license=('custom')
 url="http://www.zlib.net/"
@@ -12,7 +12,7 @@ groups=('base')
 depends=('glibc')
 # source from zlib-devel
 source=("ftp://ftp.archlinux.org/other/zlib/zlib-${pkgver}.tar.gz")
-md5sums=('ab5fa664b51eaa0788fd057c41a09dbd')
+md5sums=('e63390cc6cbd0722f70729307d4dd01d')
 
 build() {
 	cd ${srcdir}/zlib-$pkgver
