--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -16,6 +16,9 @@ source=(http://libarchive.googlecode.com/files/libarchive-$pkgver.tar.gz)
 # the missing symbols inside the libarchive .a static lib, but that is dirty)
 options=(libtool)
 
+# keep an upgrade path for older installations
+PKGEXT='.pkg.tar.gz'
+
 build() {
   cd $startdir/src/$pkgname-$pkgver
   ./configure --prefix=/usr --without-xml2
