--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -23,6 +23,9 @@ md5sums=('a8cef73d68e2a4c3a46fb46c33210719'
          'abe70dabacee7036368c7afeb686eb10'
          '52c7bc651b107d73f9902755b7594458')
 
+# keep an upgrade path for older installations
+PKGEXT='.pkg.tar.gz'
+
 build() {
   cd $srcdir/$pkgname-$pkgver
   
