--- a/gvim/trunk/PKGBUILD
+++ b/gvim/trunk/PKGBUILD
@@ -11,7 +11,7 @@ arch=('i686' 'x86_64')
 license=('custom:vim')
 url="http://www.vim.org"
 depends=("vim>=${pkgver}" 'python' 'libxt' 'desktop-file-utils' 'gtk2')
-makedepends=('pkgconfig' 'sed' 'perl' 'curl')
+makedepends=('pkgconfig' 'sed' 'perl' 'curl' 'rsync' 'ruby')
 install=${pkgname}.install
 source=(ftp://ftp.vim.org/pub/vim/unix/vim-${_srcver}.tar.bz2 \
         ftp://ftp.vim.org/pub/vim/extra/vim-${_srcver}-extra.tar.gz \
@@ -19,7 +19,7 @@ source=(ftp://ftp.vim.org/pub/vim/unix/vim-${_srcver}.tar.bz2 \
         ${pkgname}.desktop fetch_patches.sh)
 md5sums=('f0901284b338e448bfd79ccca0041254' '35e04482f07c57221c9a751aaa3b8dac' \
          'd8884786979e0e520c112faf2e176f05' '2be104c0372dd6dae19cb7968c03cd4f' \
-         '159d4d11ecaf85c06623a02c1f843d01')
+         '9c8f6b302fc3f343962686b8cf4a0350')
 
 build()
 {
@@ -36,7 +36,7 @@ build()
     --with-compiledby=ArchLinux --with-features=big \
     --with-x=yes --disable-gpm --enable-gui=gtk2 \
     --enable-multibyte --enable-cscope --enable-netbeans \
-    --enable-perlinterp --enable-pythoninterp --disable-rubyinterp
+    --enable-perlinterp --enable-pythoninterp --enable-rubyinterp
 
   make || return 1
 }
