--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,13 +5,13 @@ pkgname=vim
 _srcver=7.2
 _patchlevel=368
 pkgver=${_srcver}.${_patchlevel}
-pkgrel=2
+pkgrel=3
 pkgdesc='Vi Improved, a highly configurable, improved version of the vi text editor'
 arch=('i686' 'x86_64')
 license=('custom:vim')
 url="http://www.vim.org"
 depends=('gpm' 'coreutils' 'perl')
-makedepends=('wget' 'sed' 'grep' 'gettext' 'curl' 'rsync' 'ruby')
+makedepends=('wget' 'sed' 'grep' 'gettext' 'curl' 'rsync')
 backup=(etc/vimrc)
 install=${pkgname}.install
 # we need the extra-stuff to get all patches applied smoothly
@@ -39,7 +39,7 @@ build()
     --with-compiledby=ArchLinux --with-features=big \
     --enable-gpm --enable-acl --with-x=no --disable-gui \
     --enable-multibyte --enable-cscope \
-    --enable-perlinterp --enable-rubyinterp
+    --enable-perlinterp 
     #--with-global-runtime=/usr/share/vim --with-vim-name=vim \
   make || return 1
 }
