--- a/gnash-common/trunk/PKGBUILD
+++ b/gnash-common/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer:
 
 pkgname=gnash-common
-pkgver=0.8.6
-pkgrel=3
+pkgver=0.8.7
+pkgrel=1
 pkgdesc="A GNU Flash movie player"
 arch=('i686' 'x86_64')
 url="http://www.gnu.org/software/gnash/"
@@ -15,14 +15,11 @@ provides=('gnash')
 replaces=('gnash')
 backup=('etc/gnashrc' 'etc/gnashpluginrc')
 options=('!libtool' '!emptydirs')
-source=(http://ftp.gnu.org/gnu/gnash/${pkgver}/gnash-${pkgver}.tar.bz2
-	'libpng-1.4.patch')
-md5sums=('913bcbffd37c9603b84486227c65dce7'
-         '24a030c4da4580bcb0f69545c0822912')
+source=(http://ftp.gnu.org/gnu/gnash/${pkgver}/gnash-${pkgver}.tar.bz2)
+md5sums=('039533fec46e46b94ac6b04e33d58f3a')
 
 build() {
 	cd "$srcdir/gnash-$pkgver"
-	patch -Np1 -i ${srcdir}/libpng-1.4.patch
 
 	./configure --prefix=/usr \
 		--sysconfdir=/etc \
