--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,8 +1,8 @@
 # $Id$
-# Maintainer: Biru Ionut <ionut@archlinux.ro>
+# Maintainer: Ionut Biru <ibiru@archlinux.org>
 pkgname=empathy
-pkgver=2.29.90
-pkgrel=2
+pkgver=2.29.91
+pkgrel=1
 pkgdesc="A GNOME instant messaging client using the Telepathy framework."
 arch=('i686' 'x86_64')
 url="http://live.gnome.org/Empathy"
@@ -19,7 +19,7 @@ options=('!libtool')
 groups=('gnome-extra')
 install=empathy.install
 source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.29/${pkgname}-${pkgver}.tar.bz2)
-sha256sums=('98c16260606e3d3f829e95f3c877435696c76a4ef8b9486866ad87a7b092c633')
+sha256sums=('e2f8a33cb9b023246dbefa8422b79cbd08767fd134b5cf684f2d74102596f05b')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
