--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -15,10 +15,12 @@ conflicts=('mkinitcpio<0.5.99')
 source=(ftp://sources.redhat.com/pub/lvm2/LVM2.${_pkgverlvm}.tgz
         lvm2_install
         lvm2_hook)
-md5sums=('33e0e0f4b4582d495ff619696c634b2a' 'a85c48433b516bbf4e64e8953cf3ac5c'\
-         '2915f3bf9d50964fdc94d7d7df2673d5')
-sha1sums=('7e5c7f28a476273fa2183f80f7c9db8783aab515' 'b102f047b48bd74915f2bac092901f9e5694ef3c'\
-         '732cb5178f9feb54075794b39ae93d21ceea8498')
+md5sums=('33e0e0f4b4582d495ff619696c634b2a'
+         'f781c9f5dd4f9934952c687b73d26a18'
+         '95bed25bdbc2c2d8500e7a07aeff7f65')
+sha1sums=('7e5c7f28a476273fa2183f80f7c9db8783aab515'
+          '583424bb0a6f89ffe4e4ea446b912f0fedac7050'
+          '0dc0c0d620f634c4d078afdb78e3bae15ccf957b')
                                           
 build() {
   cd "${srcdir}/LVM2.${_pkgverlvm}"
